fix #1168 align filter buttons right

--- a/dashboard/src/app/modules/filter/components/filter/filter.component.scss
+++ b/dashboard/src/app/modules/filter/components/filter/filter.component.scss
@@ -71,6 +71,10 @@
   }
 }
 
+.filter-footer {
+  text-align: right;
+}
+
 .start-time,
 .end-time,
 .min-distance,
